--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
     "@reduxjs/toolkit": "^1.0.4",
+    "@types/lodash": "^4.14.150",
     "@types/store": "^2.0.2",
     "@types/uuid": "^7.0.2",
     "antd": "^4.1.4",
     "axios": "^0.19.2",
+    "lodash": "^4.17.15",
     "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
