--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/uuid": "^7.0.2",
     "antd": "^4.1.4",
     "axios": "^0.19.2",
+    "codemirror": "^5.53.2",
     "lodash": "^4.17.15",
     "query-string": "^6.12.1",
     "react": "^16.12.0",
+    "react-codemirror2": "^7.1.0",
     "react-dom": "^16.12.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
