--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
     "@reduxjs/toolkit": "^1.0.4",
+    "@types/codemirror": "0.0.91",
     "@types/lodash": "^4.14.150",
     "@types/store": "^2.0.2",
     "@types/uuid": "^7.0.2",
@@ -23,6 +24,7 @@
     "axios": "^0.19.2",
     "codemirror": "^5.53.2",
     "lodash": "^4.17.15",
+    "pretty-bytes": "^5.3.0",
     "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-codemirror2": "^7.1.0",
@@ -42,7 +44,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.9",
-    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
