--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@reduxjs/toolkit": "^1.0.4",
     "@types/codemirror": "0.0.91",
     "@types/lodash": "^4.14.150",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
     "@types/store": "^2.0.2",
     "@types/uuid": "^7.0.2",
     "antd": "^4.1.4",
     "axios": "^0.19.2",
     "codemirror": "^5.53.2",
+    "dayjs": "^1.8.25",
     "lodash": "^4.17.15",
     "pretty-bytes": "^5.3.0",
+    "pretty-ms": "^7.0.0",
     "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-codemirror2": "^7.1.0",
@@ -32,6 +36,7 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
