--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
     "@types/store": "^2.0.2",
+    "@types/url-parse": "^1.4.3",
     "@types/uuid": "^7.0.2",
     "antd": "^4.1.4",
     "axios": "^0.19.2",
@@ -40,7 +41,9 @@
     "react-window": "^1.8.5",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
+    "split-on-first": "^2.0.0",
     "store": "^2.0.12",
+    "url-parse": "^1.4.7",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
