--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ant-design/icons": "^4.0.6",
     "@reduxjs/toolkit": "^1.0.4",
     "@types/codemirror": "0.0.91",
+    "@types/js-beautify": "^1.8.2",
     "@types/lodash": "^4.14.150",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
@@ -27,6 +28,7 @@
     "axios": "^0.19.2",
     "codemirror": "^5.53.2",
     "dayjs": "^1.8.25",
+    "js-beautify": "^1.11.0",
     "lodash": "^4.17.15",
     "pretty-bytes": "^5.3.0",
     "pretty-ms": "^7.0.0",
