--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
     "@reduxjs/toolkit": "^1.0.4",
+    "@types/classnames": "^2.2.10",
     "@types/codemirror": "0.0.91",
     "@types/js-beautify": "^1.8.2",
     "@types/lodash": "^4.14.150",
@@ -26,6 +27,7 @@
     "@types/uuid": "^7.0.2",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "codemirror": "^5.53.2",
     "dayjs": "^1.8.25",
     "js-beautify": "^1.11.0",
@@ -33,6 +35,7 @@
     "pretty-bytes": "^5.3.0",
     "pretty-ms": "^7.0.0",
     "query-string": "^6.12.1",
+    "re-resizable": "^6.3.2",
     "react": "^16.12.0",
     "react-codemirror2": "^7.1.0",
     "react-dom": "^16.12.0",
@@ -43,6 +46,7 @@
     "react-window": "^1.8.5",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
+    "remove": "^0.1.5",
     "split-on-first": "^2.0.0",
     "store": "^2.0.12",
     "urijs": "^1.19.2",
