--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/codemirror": "0.0.91",
     "@types/js-beautify": "^1.8.2",
     "@types/lodash": "^4.14.150",
+    "@types/react-pdf": "^4.0.3",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
     "@types/store": "^2.0.2",
@@ -40,6 +41,7 @@
     "react-codemirror2": "^7.1.0",
     "react-dom": "^16.12.0",
     "react-loadable": "^5.5.0",
+    "react-pdf": "^4.1.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-virtualized-auto-sizer": "^1.0.2",
