--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dayjs": "^1.8.25",
     "js-beautify": "^1.11.0",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "pretty-bytes": "^5.3.0",
     "pretty-ms": "^7.0.0",
     "query-string": "^6.12.1",
