--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "remove": "^0.1.5",
     "split-on-first": "^2.0.0",
