--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "codemirror": "^5.53.2",
     "dotenv-webpack": "^1.8.0",
     "js-beautify": "^1.11.0",
+    "jshint": "^2.12.0",
+    "jsonlint-mod": "^1.7.6",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "pretty-bytes": "^5.3.0",
