--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "remove": "^0.1.5",
+    "reselect": "^4.0.0",
     "split-on-first": "^2.0.0",
     "store": "^2.0.12",
     "urijs": "^1.19.2",
