--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@ant-design/icons": "^4.0.6",
     "@reduxjs/toolkit": "^1.0.4",
     "@types/classnames": "^2.2.10",
-    "@types/codemirror": "0.0.91",
     "@types/js-beautify": "^1.8.2",
     "@types/lodash": "^4.14.150",
     "@types/react-pdf": "^4.0.3",
@@ -30,7 +29,9 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "codemirror": "^5.53.2",
+    "codemirror-graphql": "^0.12.3",
     "dotenv-webpack": "^1.8.0",
+    "graphql": "^15.4.0",
     "js-beautify": "^1.11.0",
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
@@ -41,7 +42,7 @@
     "query-string": "^6.12.1",
     "re-resizable": "^6.3.2",
     "react": "^16.12.0",
-    "react-codemirror2": "^7.1.0",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^16.12.0",
     "react-loadable": "^5.5.0",
     "react-pdf": "^4.1.0",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@redux-saga/types": "^1.1.0",
+    "@types/codemirror": "0.0.98",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.23",
