--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-beautify": "^1.11.0",
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
+    "localforage": "^1.9.0",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "pretty-bytes": "^5.3.0",
