--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "redux-saga": "^1.1.3",
     "remove": "^0.1.5",
     "reselect": "^4.0.0",
+    "socket.io-client": "^3.0.3",
     "split-on-first": "^2.0.0",
     "store": "^2.0.12",
     "styled-components": "^5.2.1",
