initial socket io client setup / ws page

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "remove": "^0.1.5",
     "reselect": "^4.0.0",
     "socket.io-client": "^3.0.3",
+    "socketio-wildcard": "^2.0.0",
     "split-on-first": "^2.0.0",
     "store": "^2.0.12",
     "styled-components": "^5.2.1",
@@ -75,6 +76,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/socketio-wildcard": "^2.0.3",
     "@types/styled-components": "^5.1.4",
     "@types/webpack-env": "^1.14.1",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
