--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "localforage": "^1.9.0",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
+    "phoenix": "^1.5.7",
     "pretty-bytes": "^5.3.0",
     "pretty-ms": "^7.0.0",
     "query-string": "^6.12.1",
@@ -72,6 +73,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.9",
+    "@types/phoenix": "^1.5.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
