--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "re-resizable": "^6.9.0",
     "react": "^16.12.0",
     "react-codemirror2": "^7.2.1",
+    "react-css-theme-switcher": "^0.2.3",
     "react-dom": "^16.12.0",
     "react-loadable": "^5.5.0",
     "react-pdf": "^4.1.0",
@@ -84,7 +85,7 @@
     "@types/webpack-env": "^1.14.1",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
-    "autoprefixer": "^9.7.2",
+    "autoprefixer": "^9.8.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
@@ -94,11 +95,17 @@
     "eslint-plugin-react": "^7.16.0",
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "gulp": "^4.0.2",
+    "gulp-csso": "^4.0.1",
+    "gulp-debug": "^4.0.0",
+    "gulp-less": "^4.0.1",
+    "gulp-postcss": "^9.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.4.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
+    "less-plugin-npm-import": "^2.1.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "progress-bar-webpack-plugin": "^1.12.1",
