--- a/package.json
+++ b/package.json
@@ -1,128 +1,117 @@
 {
-  "name": "etna",
+  "name": "void",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --mode=development --client-log-level warning --config .internals/webpack.dev.js",
+    "start": "NODE_ENV=development webpack serve --mode=development --client-log-level warning --config .internals/webpack.dev.js",
     "build": "NODE_ENV=production webpack --mode=production --config .internals/webpack.prod.js",
     "test": "NODE_ENV=test jest",
-    "test-watch": "NODE_ENV=test jest --watch",
-    "postinstall": "rm -rf node_modules/@types/react-native"
+    "postinstall": "rm -rf node_modules/@types/react-native",
+    "test-watch": "NODE_ENV=test jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ant-design/icons": "^4.0.6",
-    "@reduxjs/toolkit": "^1.0.4",
-    "@types/classnames": "^2.2.10",
-    "@types/js-beautify": "^1.8.2",
-    "@types/lodash": "^4.14.150",
-    "@types/react-pdf": "^4.0.3",
-    "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.2",
-    "@types/store": "^2.0.2",
-    "@types/urijs": "^1.19.8",
-    "@types/uuid": "^7.0.2",
-    "antd": "^4.8.4",
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
-    "codemirror": "^5.53.2",
-    "codemirror-graphql": "^0.12.3",
-    "dotenv-webpack": "^1.8.0",
-    "graphql": "^15.4.0",
-    "js-beautify": "^1.11.0",
+    "@ant-design/icons": "^4.6.2",
+    "@reduxjs/toolkit": "^1.5.1",
+    "antd": "^4.15.3",
+    "axios": "^0.21.1",
+    "classnames": "^2.3.1",
+    "codemirror": "^5.61.0",
+    "codemirror-graphql": "^1.0.1",
+    "eslint": "^7.25.0",
+    "graphql": "^15.5.0",
+    "js-beautify": "^1.13.13",
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
     "localforage": "^1.9.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.25.3",
-    "phoenix": "^1.5.7",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "phoenix": "^1.5.8",
     "phx-wildcard": "^1.0.0",
-    "pretty-bytes": "^5.3.0",
-    "pretty-ms": "^7.0.0",
-    "query-string": "^6.12.1",
+    "pretty-bytes": "^5.6.0",
+    "pretty-ms": "^7.0.1",
+    "query-string": "^7.0.0",
     "re-resizable": "^6.9.0",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
     "react-css-theme-switcher": "^0.2.3",
-    "react-dom": "^16.12.0",
-    "react-loadable": "^5.5.0",
-    "react-pdf": "^4.1.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.5",
-    "redux": "^4.0.4",
+    "react-dom": "^17.0.2",
+    "react-pdf": "^5.2.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6",
+    "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "remove": "^0.1.5",
     "reselect": "^4.0.0",
-    "socket.io-client": "^3.0.3",
+    "reset-css": "^5.0.1",
+    "socket.io-client": "^4.0.1",
     "socketio-wildcard": "^2.0.0",
-    "split-on-first": "^2.0.0",
+    "split-on-first": "^3.0.0",
     "store": "^2.0.12",
-    "styled-components": "^5.2.1",
-    "urijs": "^1.19.2",
-    "uuid": "^7.0.3"
+    "styled-components": "^5.2.3",
+    "urijs": "^1.19.6",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@redux-saga/types": "^1.1.0",
-    "@types/codemirror": "0.0.98",
-    "@types/enzyme": "^3.10.3",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.9",
-    "@types/phoenix": "^1.5.0",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router-dom": "^5.1.2",
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^26.0.23",
+    "@types/js-beautify": "^1.13.1",
+    "@types/jshint": "^2.12.0",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^15.0.1",
+    "@types/phoenix": "^1.5.1",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-pdf": "^5.0.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
     "@types/socketio-wildcard": "^2.0.3",
-    "@types/styled-components": "^5.1.4",
-    "@types/webpack-env": "^1.14.1",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
-    "autoprefixer": "^9.8.6",
+    "@types/store": "^2.0.2",
+    "@types/styled-components": "^5.1.9",
+    "@types/urijs": "^1.19.15",
+    "@types/uuid": "^8.3.0",
+    "@types/webpack-env": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "autoprefixer": "^9.8.5",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.6.0",
-    "eslint-plugin-react": "^7.16.0",
-    "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^2.0.0",
+    "eslint-plugin-react": "^7.23.2",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.2.5",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-debug": "^4.0.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^9.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.4.0",
-    "jest-environment-enzyme": "^7.1.2",
-    "jest-enzyme": "^7.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
     "less-plugin-npm-import": "^2.1.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "progress-bar-webpack-plugin": "^1.12.1",
-    "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "ts-jest": "^24.2.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-notifier": "^1.8.0"
-  },
-  "browserslist": [
-    "last 3 version",
-    "> 1%",
-    "not ie < 11"
-  ]
+    "mini-css-extract-plugin": "^1.5.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.36.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
+  }
 }
