--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "ESNext",
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
     "lib": ["es2018", "dom"],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@testing": ["./src/testing/index.tsx"]
     },
     "outDir": "./dist/",
     "rootDir": ".",
