--- a/app/package.json
+++ b/app/package.json
@@ -91,6 +91,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^2.0.0",
+    "dotenv-webpack": "^7.0.2",
     "eslint-plugin-react": "^7.23.2",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.5",
