--- a/app/package.json
+++ b/app/package.json
@@ -55,6 +55,7 @@
     "split-on-first": "^3.0.0",
     "store": "^2.0.12",
     "styled-components": "^5.2.3",
+    "typed-redux-saga": "^1.3.1",
     "urijs": "^1.19.6",
     "uuid": "^3.3.3"
   },
