--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.1",
     "phoenix": "^1.5.8",
     "phx-wildcard": "^1.0.0",
+    "prettier": "^2.2.1",
     "pretty-bytes": "^5.6.0",
     "pretty-ms": "^7.0.1",
     "query-string": "^7.0.0",
