proxy. add prefix to all responses header except that required for a normal browser work(content-type, content-encoding etc)

--- a/proxy/nginx/nginx.conf
+++ b/proxy/nginx/nginx.conf
@@ -32,6 +32,7 @@ http {
       resolver 127.0.0.11 [::1];
       set $target '';
       access_by_lua_file /etc/nginx/scripts/main.lua;
+      header_filter_by_lua_file /etc/nginx/scripts/header_filter.lua;
       proxy_hide_header Access-Control-Expose-Headers;
       proxy_hide_header Access-Control-Allow-Origin;
       proxy_pass $target;
