--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "codemirror": "^5.61.0",
     "codemirror-graphql": "^1.0.1",
     "eslint": "^7.25.0",
+    "file-saver": "^2.0.5",
     "graphql": "^15.5.0",
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
@@ -66,6 +67,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "@types/classnames": "^2.3.1",
+    "@types/file-saver": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/jshint": "^2.12.0",
     "@types/lodash": "^4.14.168",
