--- a/fixtures/http/package.json
+++ b/fixtures/http/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0"
   }
 }
