--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.3.1",
     "codemirror": "^5.61.0",
     "codemirror-graphql": "^1.0.1",
+    "cookie": "^0.4.1",
     "eslint": "^7.25.0",
     "file-saver": "^2.0.5",
     "graphql": "^15.5.0",
