--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.25.0",
     "file-saver": "^2.0.5",
     "graphql": "^15.5.0",
+    "hotkeys-js": "^3.8.7",
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
     "localforage": "^1.9.0",
