--- a/app/package.json
+++ b/app/package.json
@@ -26,9 +26,9 @@
     "eslint": "^7.25.0",
     "file-saver": "^2.0.5",
     "graphql": "^15.5.0",
-    "hotkeys-js": "^3.8.7",
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
+    "keyboardjs": "^2.6.4",
     "localforage": "^1.9.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -72,6 +72,7 @@
     "@types/file-saver": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/jshint": "^2.12.0",
+    "@types/keyboardjs": "^2.5.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^15.0.1",
     "@types/phoenix": "^1.5.1",
