--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^17.0.2",
     "react-pdf": "^5.3.0",
     "react-redux": "^7.2.4",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-virtualized-auto-sizer": "^1.0.5",
     "react-window": "^1.8.6",
@@ -81,6 +82,7 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-pdf": "^5.0.2",
     "@types/react-redux": "^7.1.16",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
