--- a/app/package.json
+++ b/app/package.json
@@ -62,7 +62,8 @@
     "styled-components": "^5.2.3",
     "typed-redux-saga": "^1.3.1",
     "urijs": "^1.19.6",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "workbox-webpack-plugin": "^6.4.1"
   },
   "devDependencies": {
     "@redux-saga/types": "^1.1.0",
