--- a/app/package.json
+++ b/app/package.json
@@ -120,6 +120,7 @@
     "ts-loader": "^9.1.1",
     "typescript": "^4.2.4",
     "webpack": "^5.36.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
