--- a/node-proxy/package.json
+++ b/node-proxy/package.json
@@ -4,18 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "start": "NODE_ENV=production ts-node src/index.ts",
+    "dev": "NODE_ENV=development ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/ip": "^1.1.0",
+    "@types/memoizee": "^0.4.6",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "file-type": "^16.5.0"
+    "file-type": "^16.5.0",
+    "ip": "^1.1.5",
+    "is-ip": "^3.1.0",
+    "memoizee": "^0.4.15"
   }
 }
