--- a/.github/workflows/proxy.yml
+++ b/.github/workflows/proxy.yml
@@ -36,8 +36,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: ./node-proxy
+          context: node-proxy
           push: true
-          file: Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
