--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "antd": "^4.16.13",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.1",
     "codemirror": "^5.61.0",
     "codemirror-graphql": "^1.0.1",
@@ -27,6 +28,7 @@
     "file-saver": "^2.0.5",
     "graphql": "^15.5.0",
     "hotkeys-js": "^3.8.7",
+    "httpsnippet": "^2.0.0",
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
     "keyboardjs": "^2.6.4",
@@ -38,6 +40,7 @@
     "prettier": "^2.2.1",
     "pretty-bytes": "^5.6.0",
     "pretty-ms": "^7.0.1",
+    "process": "^0.11.10",
     "query-string": "^7.0.0",
     "re-resizable": "^6.9.0",
     "react": "^17.0.2",
@@ -59,9 +62,11 @@
     "socketio-wildcard": "^2.0.0",
     "split-on-first": "^3.0.0",
     "store": "^2.0.12",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.2.3",
     "typed-redux-saga": "^1.3.1",
     "urijs": "^1.19.6",
+    "util": "^0.12.4",
     "uuid": "^3.3.3",
     "workbox-webpack-plugin": "^6.4.1"
   },
@@ -73,6 +78,7 @@
     "@testing-library/user-event": "^12.6.0",
     "@types/classnames": "^2.3.1",
     "@types/file-saver": "^2.0.2",
+    "@types/httpsnippet": "^1.23.1",
     "@types/jest": "^26.0.23",
     "@types/jshint": "^2.12.0",
     "@types/keyboardjs": "^2.5.0",
