--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "codemirror": "^5.61.0",
     "codemirror-graphql": "^1.0.1",
     "cookie": "^0.4.1",
+    "dayjs": "^1.10.7",
     "eslint": "^7.25.0",
     "file-saver": "^2.0.5",
     "graphql": "^15.5.0",
@@ -35,7 +36,6 @@
     "keyboardjs": "^2.6.4",
     "localforage": "^1.9.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
     "phoenix": "^1.6.2",
     "phx-wildcard": "^1.0.0",
     "prettier": "^2.2.1",
@@ -102,6 +102,7 @@
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
     "autoprefixer": "^9.8.5",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
@@ -119,6 +120,7 @@
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "less-plugin-npm-import": "^2.1.0",
+    "loader-utils": "^2.0.0",
     "mini-css-extract-plugin": "^1.5.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "style-loader": "^1.2.1",
