--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": [
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
   ],
   "rules": {
     "no-console": 0,
