--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -5,8 +5,24 @@ on:
     paths: ["app/**"]
 
 jobs:
-  deploy:
+ lint:
+    name: Lint
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/bootstrap-app
+      - run: npm --prefix ./app run lint.strict
+ checkTypes:
+    name: Check types
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/bootstrap-app
+      - run: npm --prefix ./app run check-types
+  build-and-deploy:
+    name: Build and deploy
+    runs-on: ubuntu-latest
+    needs: [lint, checkTypes]
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/bootstrap-app
