--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "NODE_ENV=development webpack serve --mode=development --client-log-level warning --config .internals/webpack.dev.js",
     "build": "NODE_ENV=production webpack --mode=production --config .internals/webpack.prod.js",
+    "postbuild": "npm run gen-sw",
     "analyze-bundle": "NODE_ENV=production ANALYZE_BUNDLE=true webpack --mode=production --config .internals/webpack.prod.js",
     "test": "NODE_ENV=test jest",
     "postinstall": "rm -rf node_modules/@types/react-native",
@@ -14,6 +15,7 @@
     "lint": "eslint --ext .ts,.tsx src",
     "lint.strict": "eslint --ext .ts,.tsx src --max-warnings 0",
     "lint.fix": "eslint --ext .ts,.tsx --fix src",
+    "gen-sw": "workbox generateSW ./workbox-config.js",
     "check-types": "tsc --noEmit"
   },
   "keywords": [],
@@ -72,8 +74,7 @@
     "typed-redux-saga": "^1.3.1",
     "urijs": "^1.19.6",
     "util": "^0.12.4",
-    "uuid": "^3.3.3",
-    "workbox-webpack-plugin": "^6.4.1"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@redux-saga/types": "^1.1.0",
@@ -138,6 +139,7 @@
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "workbox-cli": "^6.4.2"
   }
 }
